# mlops

./: README.md  data.csv  docker-compose.yml  main.py  project.py  pyproject.toml  requirements.txt
app/: Dockerfile  app.py  crud.py  database.py  delete_model.py  models.py  predict.py  pyproject.toml  tests.py  train.py
app/models/: Линейная регрессия1.pkl
hw1/: README.md  data.csv  main.py  validation.py
hw1/models/: linreg_0.pkl  random_forest_0.pkl
hw2/: app.py  crud.py  database.py  docker-compose.yaml  modelsdb.py  pyproject.toml  validation.py
hw2/tests/: tests_path
models/: model_1.pkl
parametrs/: params.json
